Added the HTML structure

--- a/index.html
+++ b/index.html
@@ -10,8 +10,27 @@
 </head>
 <body>
     <div class="container">
-    <h1>Hello</h1>
+    <div class="row">
+        <div class="col-6">
+        <h1>London</h1>
+        <ul>
+            <li>
+                Tuesday 12:30, clear sky
+            </li>
+            <li>
+                Humidity: 69%, Wind:1 km/h
+            </li>
+        </ul>
+</div>
+<div class="col-6">
     
+    <h2>
+        <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="cloud">
+        18ºC | ºF
+    </h2>
+</div>
+    </div>
+    <small> <a href="https://github.com/Killiana/weather-finally-app"> Open-source code</a> by Iliyana Boneva  </small>
     </div>
     <script src="src/app.js"></script>
 </body>
