--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <div class="col-6">
     <div class="clearfix weath-temp">
     
-        <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="cloud" class="left sunny" >
+        <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="cloud" class="left sunny" id="icon" >
          <strong     class="temp left" id="temper" > 18</strong><span class="left cels"  >ºC | ºF </span> 
     
     </div>
