Added the search engine

--- a/index.html
+++ b/index.html
@@ -38,7 +38,21 @@
 </div>
     </div>
     <hr>
-
+      
+    <div class="row">
+        <div class="col-9">
+<form id="form">
+        <input type="search"
+      placeholder="Type a city"
+      class="form-control w-1oo"
+      id="input">
+      </div>
+      <div class="col-3">
+      <input type="submit" value="Search" class="btn btn-primary w-100">
+  </div></div>
+    </form>
+  
+  </div>
     <small> <a href="https://github.com/Killiana/weather-finally-app"> Open-source code</a> by Iliyana Boneva  </small>
     </div>
     </div>
