Added units conversion

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="clearfix weath-temp">
     
         <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="cloud" class="left sunny" id="icon" >
-         <strong     class="temp left" id="temper" > 18</strong><span class="left cels"  >ºC | ºF </span> 
+         <strong     class="temp left" id="temper" > 18</strong><span class="left cels"  > <a href="#" id="cels-link" class="active         " > ºC</a>  | <a href="#" id="fahr-link" > ºF</a> </span> 
     
     </div>
 </div>
