Displayed the forecast date using the API

--- a/index.html
+++ b/index.html
@@ -51,11 +51,27 @@
       <input type="submit" value="Search" class="btn btn-primary w-100">
   </div></div>
     </form>
-  
-  </div>
+    <hr>
+    <div class="weather-forecast" id="forecast">
+    <div class="row">
+        <div class="col-2">
+           <div class="forecast-date">
+            Monday
+            </div>
+            <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="">
+            <div class="forecast-temp">
+            
+              <span class="forecast-max">  12
+                  </span>
+                <span class="forecast-min">   19</span>
+</div>
+        </div>
+    </div>
+</div>  
+</div>  
     <small> <a href="https://github.com/Killiana/weather-finally-app"> Open-source code</a> by Iliyana Boneva  </small>
     </div>
-    </div>
+
     <script src="src/app.js"></script>
 </body>
 </html>
